syntax = "proto3";
option go_package = "test/grpc/proto";
package proto;
import "google/protobuf/empty.proto";

service AdServer {
  rpc CreateAd (AdRequest) returns (google.protobuf.Empty);
  rpc GetAd (IdAd) returns (AdResponse);
  rpc ServeAd (IdAd) returns (Ad);
}

message AdRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
}

message AdResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
}

message IdAd {
  string id = 1;
}

message Ad {
  string url = 1;
  int64 tracking = 2;
}